--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,7 @@
   <body>
     <noscript>
       <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
+        ></strong
       >
     </noscript>
     <div id="app"></div>
