--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,7 @@
   </head>
   <body>
     <noscript>
-      <strong
-        ></strong
-      >
+      <strong></strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
